@@ -44,12 +44,21 @@ bool S0MeterSerial::StartHardware()
 	try
 	{
 		_log.Log(LOG_NORM,"S0 Meter Using serial port: %s", m_szSerialPort.c_str());
+#ifndef WIN32
 		openOnlyBaud(
 			m_szSerialPort,
 			m_iBaudRate,
 			boost::asio::serial_port_base::parity(boost::asio::serial_port_base::parity::even),
 			boost::asio::serial_port_base::character_size(7)
 			);
+#else
+		open(
+			m_szSerialPort,
+			m_iBaudRate,
+			boost::asio::serial_port_base::parity(boost::asio::serial_port_base::parity::even),
+			boost::asio::serial_port_base::character_size(7)
+			);
+#endif
 	}
 	catch (boost::exception & e)
 	{
